# mikanani-cli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: config.rs  download.rs  export.rs  feed.rs  main.rs  mikan.rs  qbt.rs  sanitize.rs  select.rs
tests/fixtures/: dr_stone.xml  mikan_bangumi.html  mikan_search.html
