[package]
name = "mikanani-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"

[[bin]]
name = "mikan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
inquire = "0.9"
quick-xml = "0.41"
reqwest = { version = "0.13", features = ["blocking", "multipart", "form", "query"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

[dev-dependencies]
tempfile = "3"
