[package]
name = "mikanani-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "An interactive CLI to download anime torrents from Mikan Project (蜜柑计划) RSS feeds."
repository = "https://github.com/AlisaAkiron/mikanani-cli"
homepage = "https://github.com/AlisaAkiron/mikanani-cli"
readme = "README.md"
keywords = ["mikan", "anime", "rss", "torrent", "qbittorrent"]
categories = ["command-line-utilities"]

[[bin]]
name = "mikan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
inquire = "0.9"
quick-xml = "0.41"
reqwest = { version = "0.13", features = ["blocking", "multipart", "form", "query"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

[dev-dependencies]
tempfile = "3"
